fix(mz-common-swagger): 优化代码

--- a/mz-common/mz-common-swagger/pom.xml
+++ b/mz-common/mz-common-swagger/pom.xml
@@ -32,6 +32,28 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>swagger-models</artifactId>
+                    <groupId>io.swagger</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!--
+            解决 java.lang.NumberFormatException: For input string: "" 异常
+            @ApiModelProperty注解里example属性都会进行非空判断，在1.5.22是解决了这个问题。
+        -->
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-models</artifactId>
+            <version>1.5.22</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>swagger-annotations</artifactId>
+                    <groupId>io.swagger</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
