--- a/mz-common/mz-common-security/pom.xml
+++ b/mz-common/mz-common-security/pom.xml
@@ -35,6 +35,14 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <!--swagger 注解依赖-->
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+
         <!--安全模块-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
