fix(mz-common-sentinel): 优化代码

--- a/mz-common/mz-common-sentinel/pom.xml
+++ b/mz-common/mz-common-sentinel/pom.xml
@@ -34,6 +34,11 @@
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-datasource-nacos</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.mz.common.utils</groupId>
+            <artifactId>mz-common-utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
