--- a/mz-common/mz-common-sentinel/src/main/resources/sentinel.properties
+++ b/mz-common/mz-common-sentinel/src/main/resources/sentinel.properties
@@ -1,15 +1,15 @@
-#sentinel日志配置
+#sentinel\u65E5\u5FD7\u914D\u7F6E
 csp.sentinel.log.dir=logs/csp
 csp.sentinel.log.use.pid=false
-#日志输出到文件还是控制台 file表示文件，console表示控制台
+#\u65E5\u5FD7\u8F93\u51FA\u5230\u6587\u4EF6\u8FD8\u662F\u63A7\u5236\u53F0 file\u8868\u793A\u6587\u4EF6\uFF0Cconsole\u8868\u793A\u63A7\u5236\u53F0
 csp.sentinel.log.output.type=file
 #50M
 csp.sentinel.metric.file.single.size=52428800
-#日志文件个数
+#\u65E5\u5FD7\u6587\u4EF6\u4E2A\u6570
 csp.sentinel.metric.file.total.count=100
-#心跳配置，dashboard服务连接地址
+#\u5FC3\u8DF3\u914D\u7F6E\uFF0Cdashboard\u670D\u52A1\u8FDE\u63A5\u5730\u5740
 #csp.sentinel.dashboard.server=localhost:8080
-#心跳包周期 单位毫秒
+#\u5FC3\u8DF3\u5305\u5468\u671F \u5355\u4F4D\u6BEB\u79D2
 csp.sentinel.heartbeat.interval.ms=1000
-##客户应用端服务接口
+#\u5BA2\u6237\u5E94\u7528\u7AEF\u670D\u52A1\u63A5\u53E3
 #csp.sentinel.api.port=8083
