--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <spring-cloud-alibaba.version>2.2.9.RELEASE</spring-cloud-alibaba.version>
         <spring-cloud.version>Hoxton.SR12</spring-cloud.version>
         <fastjson.version>1.2.83</fastjson.version>
-        <mybatis-plus.version>3.5.0</mybatis-plus.version>
+        <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
         <commons-io.version>2.10.0</commons-io.version>
         <commons-fileupload.version>1.3.3</commons-fileupload.version>
         <commons.lang.version>3.12.0</commons.lang.version>
@@ -26,7 +26,7 @@
         <druid-spring.version>1.2.3</druid-spring.version>
         <jjwt.version>0.9.1</jjwt.version>
         <jjwt-other.version>0.10.6</jjwt-other.version>
-        <hutool.version>5.7.16</hutool.version>
+        <hutool.version>5.8.11</hutool.version>
         <jna.version>5.9.0</jna.version>
         <springfox.version>3.0.0</springfox.version>
         <servlet.version>4.0.1</servlet.version>
@@ -39,6 +39,7 @@
         <curator.version>4.0.1</curator.version>
         <maven.deploy.version>2.8.2</maven.deploy.version>
         <junit.version>4.13.2</junit.version>
+        <logback.version>1.2.9</logback.version>
     </properties>
 
     <modules>
@@ -214,6 +215,12 @@
                 <version>${minio.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+
             <!-- 切面 -->
             <dependency>
                 <groupId>org.aspectj</groupId>
@@ -240,11 +247,6 @@
                         <artifactId>junit-vintage-engine</artifactId>
                     </exclusion>
                 </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.amqp</groupId>
-                <artifactId>spring-rabbit-test</artifactId>
-                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -285,6 +287,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                    <nonFilteredFileExtensions>
+                        <nonFilteredFileExtension>xdb</nonFilteredFileExtension>
+                        <nonFilteredFileExtension>jks</nonFilteredFileExtension>
+                        <nonFilteredFileExtension>rp</nonFilteredFileExtension>
+                        <nonFilteredFileExtension>excel</nonFilteredFileExtension>
+                        <nonFilteredFileExtension>ppt</nonFilteredFileExtension>
+                        <nonFilteredFileExtension>word</nonFilteredFileExtension>
+                    </nonFilteredFileExtensions>
+                </configuration>
             </plugin>
         </plugins>
         <resources>
