--- a/mz-auth/pom.xml
+++ b/mz-auth/pom.xml
@@ -56,6 +56,17 @@
         </dependency>
 
         <dependency>
+            <groupId>com.mz.common</groupId>
+            <artifactId>mz-common-monitor</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
