feat(mz-common): 新增公共监控模块

--- a/mz-common/pom.xml
+++ b/mz-common/pom.xml
@@ -28,5 +28,6 @@
         <module>mz-common-constant</module>
         <module>mz-common-utils</module>
         <module>mz-common-log</module>
+        <module>mz-common-monitor</module>
     </modules>
 </project>
