feat(mz-sentinel-dashboard): 优化代码，修复Redis拉取和推送规则

--- a/mz-sentinel-dashboard/pom.xml
+++ b/mz-sentinel-dashboard/pom.xml
@@ -125,7 +125,12 @@
         <dependency>
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-datasource-redis</artifactId>
-            <version>1.7.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mz.common</groupId>
+            <artifactId>mz-common-monitor</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
