feat(mz-common-gateway)::heavy_plus_sign: 添加动态网关公共依赖模块

--- a/mz-common/pom.xml
+++ b/mz-common/pom.xml
@@ -29,5 +29,6 @@
         <module>mz-common-utils</module>
         <module>mz-common-log</module>
         <module>mz-common-monitor</module>
+        <module>mz-common-gateway</module>
     </modules>
 </project>
