--- a/mz-common/mz-common-utils/pom.xml
+++ b/mz-common/mz-common-utils/pom.xml
@@ -78,6 +78,10 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-json</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
