--- a/mz-modules/mz-system/mz-system-model/src/main/java/com/mz/system/model/lombok.config
+++ b/mz-modules/mz-system/mz-system-model/src/main/java/com/mz/system/model/lombok.config
@@ -2,3 +2,9 @@
 config.stopBubbling=true
 # 全局配置 equalsAndHashCode 的 callSuper 属性为true，这样就不用每个类都要去写了
 lombok.equalsAndHashCode.callSuper=call
+# 支持Qualifier注解
+lombok.copyableAnnotations += org.springframework.beans.factory.annotation.Qualifier
+# 支持Qualifier注解
+lombok.copyableAnnotations += org.springframework.beans.factory.annotation.Qualifier
+# 支持Qualifier注解
+lombok.copyableAnnotations += org.springframework.beans.factory.annotation.Qualifier
