--- a/mz-modules/mz-system/mz-system-provider/pom.xml
+++ b/mz-modules/mz-system/mz-system-provider/pom.xml
@@ -41,6 +41,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.mz.common.gateway</groupId>
+            <artifactId>mz-common-gateway</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.mz.common</groupId>
             <artifactId>mz-common-monitor</artifactId>
             <version>0.0.1-SNAPSHOT</version>
