--- a/mz-common/mz-common-core/pom.xml
+++ b/mz-common/mz-common-core/pom.xml
@@ -57,6 +57,18 @@
             <artifactId>spring-boot-starter-json</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.sun.faces</groupId>
+            <artifactId>jsf-impl</artifactId>
+            <version>2.2.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.faces</groupId>
+            <artifactId>jsf-api</artifactId>
+            <version>2.2.4</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.aspectj</groupId>
