--- a/mz-common/mz-common-utils/pom.xml
+++ b/mz-common/mz-common-utils/pom.xml
@@ -84,6 +84,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
         </dependency>
