feat(mz-common-captcha)::heavy_plus_sign: 添加验证码公共模块

--- a/mz-common/pom.xml
+++ b/mz-common/pom.xml
@@ -30,5 +30,6 @@
         <module>mz-common-log</module>
         <module>mz-common-monitor</module>
         <module>mz-common-gateway</module>
+        <module>mz-common-captcha</module>
     </modules>
 </project>
