--- a/mz-common/mz-common-redis/pom.xml
+++ b/mz-common/mz-common-redis/pom.xml
@@ -37,7 +37,8 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.17.2</version>
-            <optional>true</optional>
+            <!-- fix:去掉后允许依赖传递 -->
+            <!-- <optional>true</optional> -->
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -58,7 +59,6 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
             <scope>compile</scope>
-            <optional>true</optional>
         </dependency>
     </dependencies>
 
