--- a/mz-common/mz-common-utils/pom.xml
+++ b/mz-common/mz-common-utils/pom.xml
@@ -103,6 +103,10 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
