--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <spring-cloud-alibaba.version>2.2.9.RELEASE</spring-cloud-alibaba.version>
         <spring-cloud.version>Hoxton.SR12</spring-cloud.version>
         <spring-boot-admin.version>2.3.1</spring-boot-admin.version>
+        <alibaba.nacos.version>2.2.4</alibaba.nacos.version>
         <fastjson.version>1.2.83</fastjson.version>
         <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
         <commons-io.version>2.10.0</commons-io.version>
@@ -80,6 +81,11 @@
                 <version>${spring-cloud-alibaba.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.nacos</groupId>
+                <artifactId>nacos-client</artifactId>
+                <version>${alibaba.nacos.version}</version>
             </dependency>
             <!-- JSON 解析器和生成器 -->
             <dependency>
